syntax = "proto3";
package publicawesome.stargaze.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "stargaze/claim/v1beta1/claim_record.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/public-awesome/stargaze/v12/x/claim/types";

// Msg defines the Msg service.
service Msg {
  rpc InitialClaim(MsgInitialClaim) returns (MsgInitialClaimResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
  rpc ClaimFor(MsgClaimFor) returns (MsgClaimForResponse);
}

message MsgInitialClaim { string sender = 1; }

message MsgInitialClaimResponse {
  // total initial claimable amount for the user
  repeated cosmos.base.v1beta1.Coin claimed_amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"claimed_amount\""
  ];
}

message MsgClaimFor {
  string sender = 1;
  string address = 2;
  Action action = 3;
}

message MsgClaimForResponse {
  string address = 1;
  // total initial claimable amount for the user
  repeated cosmos.base.v1beta1.Coin claimed_amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"claimed_amount\""
  ];
}
